# gdal

./: .gitattributes  .gitignore  .gitmodules  .ignore  .travis.yml  .typos.toml  CHANGES.md  Cargo.toml  DEVELOPMENT.md  LICENSE.txt  Makefile  README.md  Readme.md  bors.toml  build.rs  conanfile.txt
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  sanitizer.yml
examples/: mdarray.rs  metadata.rs  rasterband.rs  read_ogr_arrow.rs  read_write_ogr.rs  read_write_ogr_datetime.rs  spatial_reference.rs  version.rs  write_ogr.rs
fixtures/: GrandParisMunicipalities.geojson  color-relief.clr  dem-hills.tiff  fixture_util.py  gcp.tif  labels-nad.tif  labels.tif  labels_i64.tif  labels_u64.tif  m_3607824_se_17_1_20160620_sub.tif  null_feature_fields.geojson  offset_scaled_tinymarble.tif  points_with_datetime.json  poly.gpkg  roads.geojson  roads.sql  soundg.json  test_color_table.tif  three_layer_ds.s3db  tinymarble.jpeg.aux.xml  tinymarble.png.aux.xml  tinymarble.tif  tinymarble.tif.aux.xml  tinymarble.tif.ovr  two_geoms.csv
gdal-src/: Cargo.toml  build.rs
gdal-src/src/: lib.rs
gdal-sys/: Cargo.toml  README.md  Readme.md  build.rs  wrapper.h
gdal-sys/prebuilt-bindings/: gdal_1.11.rs  gdal_2.0.rs  gdal_2.1.rs  gdal_2.2.rs  gdal_2.3.rs  gdal_2.4.rs  gdal_3.0.rs  gdal_3.1.rs  gdal_3.2.rs  gdal_3.3.rs  gdal_3.4.rs  gdal_3.6.rs  gdal_3.7.rs  gdal_3.9.rs  gdal_3_0.rs  gdal_3_1.rs  gdal_3_10.rs  gdal_3_2.rs  gdal_3_3.rs  gdal_3_4.rs  gdal_3_5.rs  gdal_3_6.rs  gdal_3_7.rs  gdal_3_8.rs  gdal_3_9.rs
gdal-sys/prebuilt-bindings/3_10/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_11/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_12/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_4/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_5/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_6/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_7/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_8/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/prebuilt-bindings/3_9/: gdal_i686-pc-windows-gnu.rs  gdal_i686-unknown-linux-gnu.rs  gdal_x86_64-pc-windows-gnu.rs  gdal_x86_64-unknown-linux-gnu.rs
gdal-sys/scripts/: generate_all_bindings.sh  generate_bindings.sh
gdal-sys/src/: cpl_conv.rs  cpl_error.rs  gdal.rs  gdal_enums.rs  lib.rs  ogr.rs  ogr_enums.rs  ogr_structs.rs  osr.rs
script/: ci-before-install.sh  doctest-output.sh  fix_typos.sh
src/: config.rs  conv.rs  cpl.rs  dataset.rs  driver.rs  errors.rs  gcp.rs  gdal.rs  gdal_major_object.rs  geo_transform.rs  geom.rs  lib.rs  metadata.rs  options.rs  proj.rs  raster.rs  raster_programs.rs  rustiles.rs  test_utils.rs  thread_safe.rs  tile.rs  utils.rs  vector.rs  version.rs  vsi.rs  warp.rs  work.rs  workqueue.rs  xml.rs
src/alg/: transform.rs
src/gdal/: dataset.rs  driver.rs  geom.rs  lib.rs  mod.rs  proj.rs  raster.rs  utils.rs  vector.rs  warp.rs
src/gdal_2_2/: mod.rs
src/gdal_2_2/spatial_ref/: tests.rs
src/gdal_2_2/vector/: tests.rs
src/gdal_3_0/: mod.rs
src/gdal_3_0/spatial_ref/: mod.rs  srs.rs  tests.rs
src/gdal_3_0/vector/: tests.rs
src/gdal_common/: config.rs  dataset.rs  driver.rs  metadata.rs  mod.rs  version.rs
src/gdal_common/raster/: dataset.rs  driver.rs  mod.rs  rasterband.rs  tests.rs  warp.rs
src/gdal_common/spatial_ref/: mod.rs  srs.rs  tests.rs
src/gdal_common/vector/: dataset.rs  defn.rs  driver.rs  feature.rs  gdal_to_geo.rs  geo_to_gdal.rs  geometry.rs  layer.rs  mod.rs
src/gdal_common/vector/tests/: convert_geo.rs  mod.rs
src/programs/: destination.rs  mod.rs
src/programs/raster/: mdimtranslate.rs  mod.rs  vrt.rs
src/programs/vector/: mod.rs  vector_translate.rs
src/raster/: buffer.rs  create_options.rs  dataset.rs  driver.rs  gcp.rs  gdal.rs  gdal_enums.rs  mdarray.rs  mod.rs  rasterband.rs  rasterize.rs  tests.rs  types.rs  warp.rs
src/raster/dem/: aspect.rs  color_relief.rs  hillshade.rs  mod.rs  roughness.rs  slope.rs  tpi.rs  tri.rs
src/raster/processing/: dest.rs  mod.rs
src/raster/processing/dem/: aspect.rs  color_relief.rs  hillshade.rs  mod.rs  options.rs  roughness.rs  slope.rs  tpi.rs  tri.rs
src/raster/processing/warp/: mod.rs  options.rs  reproject.rs  resample.rs
src/raster/warp/: mod.rs  reproject_options.rs  resample.rs  warp_options.rs
src/spatial_ref/: mod.rs  srs.rs  tests.rs  transform.rs  transform_opts.rs
src/vector/: dataset.rs  defn.rs  driver.rs  feature.rs  gdal_to_geo.rs  geo_to_gdal.rs  geom.rs  geometry.rs  layer.rs  mod.rs  ogr.rs  options.rs  sql.rs  tests.rs  transaction.rs
src/vector/ops/: mod.rs  predicates.rs  set.rs  transformations.rs
src/vector/ops/conversions/: formats.rs  gdal_to_geo.rs  mod.rs
src/vector/ops/geometry/: intersection.rs  mod.rs
src/vector/tests/: convert_geo.rs  mod.rs
src/vector/vector_tests/: convert_geo.rs  mod.rs  sql.rs
tests/: driver-no-auto-register.rs  drivers.rs  error_handler.rs
tests/compile-tests/: 01-features-aliasing-errors.rs  01-features-aliasing-errors.stderr  utils.rs
