[package]
name = "gdal"
description = "GDAL bindings for Rust"
license = "MIT"
version = "0.16.0"
authors = [
    "Alex Morega <alex@grep.ro>",
    "Johannes Drönner <droenner@informatik.uni-marburg.de>",
]
categories = ["science::geo", "api-bindings"]
repository = "https://github.com/georust/gdal"
edition = "2021"
rust-version = "1.58"

[features]
default = []
bindgen = ["gdal-sys/bindgen"]
array = ["ndarray"]

[dependencies]
thiserror = "1.0"
libc = "0.2"
geo-types = { version = "0.7.11" }
gdal-sys = { path = "gdal-sys", version = "^0.9" }
ndarray = { version = "0.15", optional = true }
chrono = { version = "0.4.26", default-features = false }
bitflags = "2.4"
once_cell = "1.18"

[build-dependencies]
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"
# Only used in the example
arrow = { version = "52.0", default-features = false, features = ["ffi"] }

[workspace]
members = ["gdal-sys"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# include `array` feature in documentation
features = ["array"]
# define attribute `docsrs` for feature badges
rustdoc-args = ["--cfg", "docsrs"]
