[package]
name = "gdal"
description = "GDAL bindings for Rust"
license = "MIT"
version = "0.19.0"
authors = [
    "Alex Morega <alex@grep.ro>",
    "Johannes Drönner <droenner@informatik.uni-marburg.de>",
]
categories = ["science::geo", "api-bindings"]
repository = "https://github.com/georust/gdal"
edition = "2021"
rust-version = "1.80"
include = ["CHANGES.md", "Cargo.toml", "README.md", "build.rs", "src/**/*.rs"]

[features]
default = []
bindgen = ["gdal-sys/bindgen"]
array = ["ndarray"]

[dependencies]
thiserror = "2.0"
geo-types = { version = "0.7.18" }
gdal-sys = { path = "gdal-sys", version = "0.12" }
gdal-src = { path = "gdal-src", version = "0.3", optional = true, default-features = false }
ndarray = { version = "0.17", optional = true }
chrono = { version = "0.4.43", default-features = false }
bitflags = "2.10"

[build-dependencies]
semver = "1.0"

[dev-dependencies]
tempfile = "3.24"
# Only used in the example
arrow-array = { version = "57.3", default-features = false, features = ["ffi"] }

[workspace]
members = ["gdal-src", "gdal-sys"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# include `array` feature in documentation
features = ["array"]
# define attribute `docsrs` for feature badges
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(major_is_3)',
    'cfg(major_ge_3)',
    'cfg(major_ge_4)',
    'cfg(minor_ge_1)',
    'cfg(minor_ge_2)',
    'cfg(minor_ge_3)',
    'cfg(minor_ge_4)',
    'cfg(minor_ge_5)',
    'cfg(minor_ge_6)',
    'cfg(minor_ge_7)',
    'cfg(minor_ge_8)',
    'cfg(minor_ge_9)',
    'cfg(minor_ge_10)',
    'cfg(minor_ge_11)',
    'cfg(minor_ge_12)',
]
