[package]
name = "gdal-sys"
description = "Low level GDAL bindings for Rust"
license = "MIT"
version = "0.12.0"
repository = "https://github.com/georust/gdal"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]
categories = ["science::geo", "api-bindings"]
edition = "2021"
rust-version = "1.77"
links = "gdal"

[dependencies]
gdal-src = { version = "0.3", path = "../gdal-src/", optional = true }

[build-dependencies]
bindgen = { version = "0.72", optional = true }
pkg-config = "0.3"
semver = "1.0"


[features]
default = []
bundled = ["dep:gdal-src"]
